# lifted_sampling_c2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  REPORT.md  run_benchmarks.py
docs/: architecture.md
docs/plans/: 2026-07-15-general-c2-sampling.md  2026-07-15-jsonl-output-design.md  2026-07-15-local-pair-sampling-design.md
models/: 2-colored-graph.wfomcs  31.wfomcs  README.md
models/counting_quantifiers/: embedded-row-count.wfomcs  existential-as-ge-one.wfomcs  facility-location.wfomcs  global-eq.wfomcs  global-ge.wfomcs  global-gt.wfomcs  global-le.wfomcs  global-lt.wfomcs  global-ne.wfomcs  mod-count-definitions.wfomcs  nullary-definition-eq.wfomcs  nullary-definition-ge.wfomcs  nullary-definition-gt.wfomcs  nullary-definition-le.wfomcs  nullary-definition-lt.wfomcs  nullary-definition-ne.wfomcs  row-eq.wfomcs  row-ge.wfomcs  row-gt.wfomcs  row-le.wfomcs  row-lt.wfomcs  row-ne.wfomcs  unary-definition-eq.wfomcs  unary-definition-ge.wfomcs  unary-definition-gt.wfomcs  unary-definition-le.wfomcs  unary-definition-lt.wfomcs  unary-definition-ne.wfomcs
models/linear_order/: BA.wfomcs  head-middle-tail.wfomcs
models/modk/: 0mod2-regular-graph.wfomcs  2mod4-regular-graph-sc2.wfomcs  max2-regular-graph.wfomcs
models/regular_graphs/: 2-regular-directed-graph.wfomcs  2-regular-graph.wfomcs  3-regular-2-colored-graph.wfomcs  3-regular-3-colored-graph.wfomcs  3-regular-4-colored-graph.wfomcs  3-regular-directed-graph.wfomcs  4-regular-2-colored-graph.wfomcs  4-regular-3-colored-graph.wfomcs  (+1 more)
(+47 files in other folders)
